# nuage-gluon

./: .gitignore  README.md  config.ini  create_gluon_port.py  gluon-shim.py  nuage-gluon-shim.py  nuage_gluon_shim.py  requirements.txt  setup.cfg  vm_split_activation.py
nuage/: nuage_gluon_shim.py  vm_split_activation.py  vm_split_activation_l2.py
tests/: etcd_send.py  etcd_watch.py  nuage-gluon-shim.py  test_NUSplitActivation.py
