[metadata]
name = nuage-gluon
summary = Nuage Gluon
description-file =
    README.rst
author = Kamal
author-email = kamal.hussain@nokia.com
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage

[entry_points]
console_scripts =
	nuage-shim-server = nuage.nuage_gluon_shim:main
